tests/bad_reserved_name_enum_item.sl
enum E i32 { __sl_bad = 1 }
